@@ -31,6 +31,7 @@ Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.1.2b0
 Fixes:
 
 - Plot: Fixed automatic boundaries #170
+- Tips: Fixed weird tooltip behavior #171
 
 -----------------------------------------------------------------------
  VERSION 0.1.1 (9/3/2020)
